welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (b%10 == c%10 && a%10 == c%10 || a%10 == b%10) {
        ^